auth almost complete, stores users fails to match password

--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -4,6 +4,7 @@
     <input type="text" name="username" placeholder="Username" />
     <input type="email" name="email" placeholder="Email" />
     <input type="password" name="password" placeholder="Password" />
+    <input type="submit" value="Create New User" />
 </form>
 
 <%- include('../partials/end') -%>
