--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,7 @@
     <nav>
         <ul class="navList">
             <li><a href="/">Home</a></li>
-            <li><a href="/user/:id">Profile</a></li>
+            <li><a href="/user">Profile</a></li>
             <li><a href="/search">Search</a></li>
             <li><a href="/about">About</a></li>
         </ul>
