--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/boilerplate') -%>
 
-<h3>Main Search Page</h3>
+<h3>PROFILE PAGE</h3>
 
 <%- include('../partials/end') -%>
