--- a/views/user/show.ejs
+++ b/views/user/show.ejs
@@ -1,5 +1,9 @@
-<%- include('../partials/boilerplate') -%>
+<%- include('../partials/boilerplate') %>
 
-<h3>PROFILE PAGE</h3>
+<form method="POST" action="/user/<%= data.user.id %>?_method=PUT">
+    <input type="text" name="username" value="<%= data.user.username %>" placeholder="Username" />
+    <input type="email" name="email" value="<%= data.user.email %>" placeholder="Email" />
+    <input type="submit" value="Make Changes" />
+</form>
 
-<%- include('../partials/end') -%>
+<%- include('../partials/end') %>
