back on track.. user is running smoothly

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/boilerplate') -%>
 
 <div class="welcome">
-    <h1>to my Restaurant-express App</h1>
+    <h1>Welcome to my Restaurant-express App</h1>
     <div class="loginReg">
         <form class="login" method="GET" action="/auth/login">
             <input type="submit" value="Login">
