--- a/views/search/index.ejs
+++ b/views/search/index.ejs
@@ -1,5 +1,8 @@
 <%- include('../partials/boilerplate') -%>
 
 <h3>Main Search Page</h3>
+<form method="GET" action="/search/new">
+    <input type="submit" value="Start a New Search" />
+</form>
 
 <%- include('../partials/end') -%>
