--- a/views/city/index.ejs
+++ b/views/city/index.ejs
@@ -1,8 +1,10 @@
 <%- include('../partials/boilerplate') %>
 
-<h3>City Page: <%= data.city.name %> </h3>
+<h3>City Page</h3>
 <p>TRY TO GET ONE CITY ON HERE</p>
-
+<ul>
+    <% console.log('ON THE PAGE', data.tastes) %>
+</ul>
 
 
 
