--- a/views/search/new.ejs
+++ b/views/search/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/boilerplate') %>
 
-<form method="POST" action="/user/city">
+<form method="POST" action="/city">
     <input type="text" name="name" placeholder="City, ST" />
     <input type="submit" value="Search" />
 </form>
