--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -5,7 +5,10 @@
     <% if (data.cities) { %>
         <ul>
             <% for (let city of data.cities) { %>
-                <li><a href="/user/city/<%= city.id %>"><%= city.name %></a></li>
+                <li><%= city.name %></li>
+                <form method="POST" action="/user/city/<%= city.id %>?_method=DELETE">
+                    <input type="submit" value="Remove <%= city.name %>" />
+                </form>
             <% } %>
         </ul>
     <% } %>
