--- a/views/search/new.ejs
+++ b/views/search/new.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/boilerplate') %>
 
 <form method="POST" action="/city">
-    <input type="text" name="name" placeholder="City, ST" />
+    <input type="text" name="name" placeholder="City, State" />
     <input type="submit" value="Search" />
 </form>
 
