--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -2,6 +2,7 @@
 
 <form method="POST" action="/user">
     <input type="text" name="username" placeholder="Username" />
+    <input type="text" name="name" placeholder="Name" />
     <input type="email" name="email" placeholder="Email" />
     <input type="password" name="password" placeholder="Password" />
     <input type="submit" value="Create New User" />
