--- a/views/user/edit.ejs
+++ b/views/user/edit.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/boilerplate') %>
 
 <form method="POST" action="/user/<%= user.id %>?_method=PUT">
+    <input type="text" name="name" value="<%= user.name %>" placeholder="Name" />
     <input type="email" name="email" value="<%= user.email %>" placeholder="Email" />
     <input type="submit" value="Make Changes" />
 </form>
