--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -3,6 +3,7 @@
 <h3><%= data.user.username %>'s PAGE</h3>
 <div class="allCities">
     <% if (data.cities) { %>
+        <h3>Cities</h3>
         <ul>
             <% for (let city of data.cities) { %>
                 <li><a href="/city/<%= city.id %>"><%= city.name %></a></li>
@@ -14,8 +15,22 @@
     <% } %>
 </div>
 
+<div class="allRestaurants">
+    <% if (data.restaurants) { %>
+        <h3>Restaurants</h3>
+        <ul>
+            <% for (let rest of data.restaurants) { %>
+                <li><a href="/restaurant/<%= rest.zomato_id %>"> <%= rest.name %></a></li>
+                <form method="POST" action="/user/restaurant/<%= rest.zomato_id %>?_method=DELETE">
+                    <input type="submit" value="Remove <%= rest.name %> " />
+                </form>
+            <% } %>
+        </ul>
+    <% } %>
+</div>
+
 <form method="GET" action="/user/<%= data.user.id %>/edit">
-    <input type="submit" value="Edit <%= data.user.username %>'s Info" />
+    <input type="submit" value="Edit <%= data.user.name %>'s Info" />
 </form>
 <form method="GET" action="/auth/logout">
     <input type="submit" value="Sign Off" />
