--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,6 @@
 <footer>
     <div class="createdBy">
-        <p><strong>Created By:</strong> Matthew Schlaff & Zomato's API</p>
+        <p><strong>&#169; Matthew Schlaff</strong></p>
+        <p><strong>Created By: Matthew Schlaff & Zomato's API</strong></p>
     </div>
 </footer>
