--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <div class="logo"></div>
+    <div class="logo">REA</div>
     <nav>
         <ul class="navList">
             <li><a href="/">Home</a></li>
