--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -36,13 +36,28 @@ a:hover {
 }
 
 form>input {
-    width: 200px;
+    width: auto;
     height: 50px;
     border-radius: 25px;
     font-size: 1.25em;
     font-weight: 300;
     text-align: center;
     background-color: #00D0F5;
+}
+
+button {
+    margin: 2%;
+    width: auto;
+    height: 50px;
+    border-radius: 25px;
+    font-size: 1.25em;
+    font-weight: 300;
+    text-align: center;
+    background-color: #00D0F5;
+}
+
+button:hover {
+    background-color: #005066;
 }
 
 /*      MY MAIN DIV FOR STYLING      */
@@ -58,6 +73,7 @@ form>input {
     justify-content: center;
     align-items: center;
     width: 75%;
+    margin: 2%;
 }
 
 .container>form {
@@ -72,12 +88,12 @@ form>input {
     background-color: wheat;
 }
 
-.container>form>input:last-child {
+form>input:last-child {
     margin: 2% 0;
     background-color: #00D0F5;
 }
 
-.container>form>input:last-child:hover {
+form>input:last-child:hover {
     background-color: #005066;
 }
 
@@ -85,22 +101,8 @@ form>input {
     text-transform: uppercase;
     text-align: center;
     font-size: 2.5em;
+    letter-spacing: 2px;
     margin: 5%;
-}
-
-.container>button {
-    margin: 2%;
-    width: 200px;
-    height: 50px;
-    border-radius: 25px;
-    font-size: 1.25em;
-    font-weight: 300;
-    text-align: center;
-    background-color: #00D0F5;
-}
-
-.container>button:hover {
-    background-color: #005066;
 }
 
 strong {
@@ -218,11 +220,216 @@ footer {
 
 /*      SEARCH PAGE '/search'    */
 
+.newSearch {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 75%;
+}
+
+.newSearch h3 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 2.5em;
+    letter-spacing: 2px;
+    margin: 3%;
+}
+
 .allCities>ul {
     display: flex;
     flex-flow: wrap column;
     justify-content: center;
     text-align: center;
+}
+
+/*      USER'S PAGE '/user'      */
+
+.user {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+}
+
+.user h3 {
+    font-size: 2.5em;
+}
+
+.userName {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.usersPage {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 80%;
+    margin-top: 3%;
+}
+
+.cityRest>h4, .allRest>h4 {
+    font-size: 1.75em;
+}
+
+.cityName>h4 {
+    font-size: 1.5em;
+    text-decoration: underline;
+}
+
+.restName>h5, .userRestList>h5 {
+    font-size: 1.25em;
+}
+
+.cityName>form>input, .restName>form>input, .userRestList>form>input {
+    height: 30px;
+    font-size: .75em;
+}
+
+/*      CITY PAGE        */
+
+.topCity {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.topCity>h3 {
+    font-size: 2.5em;
+}
+
+.cityLinks {
+    display: flex;
+}
+
+.middleCity {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    height: 350px;
+}
+
+.leftCity {
+    display: flex;
+    flex-direction: column;
+    width: 250px;
+}
+
+.leftCity>a {
+    font-size: 1em;
+    margin: 2%;
+    width: auto;
+    height: 30px;
+}
+
+.cuisines {
+    font-size: 1.25em;
+    font-weight: 300;
+    margin: 4%;
+    padding-left: 15%;
+}
+
+.locality, .cuisTitle {
+    font-size: 1.75em;
+    margin: 2%;
+}
+
+.rightCity>img {
+    width: 50%;
+    height: 250px;
+}
+
+.bottomCity {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    text-align: center;
+}
+
+.bottomCity>ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.bottomCity>ul>li {
+    padding: 2%;
+    border: solid 1px black;
+    border-radius: 25px;
+    background-color: white;
+    width: auto;
+    height: auto;
+}
+
+.listRestName>h4 {
+    font-size: 1.25em;
+    text-decoration: underline;
+}
+
+.listRestName>ul>li {
+    margin: 2%;
+    font-size: 1em;
+    text-decoration: none;
+}
+
+.listForm>form>input {
+    height: 30px;
+    font-size: .75em;
+}
+
+/*      RESTAURANTS PAGE     */
+
+.topRest {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 3%;
+}
+
+.topRest>h3 {
+    font-size: 2.5em;
+}
+
+.topRight {
+    display: flex;
+}
+
+.middleRest {
+    display: flex;
+    width: 100%;
+}
+
+.middleLeft {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 40%;
+}
+
+.middleLeft>p {
+    font-size: 1.1em;
+    margin: 2.5% 0;
+}
+
+.middleRight {
+    width: 60%;
+}
+
+.middleRight>img {
+    width: 100%;
+}
+
+.restLinkList>ul {
+    display: flex;
+    justify-content: space-between;
 }
 
 /*      ERROR HANDLERS       */
