--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,6 +7,9 @@
         <input type="password" name="password" placeholder="Password" required />
         <input type="submit" value="Log in" />
     </form>
+    <form method="GET" action="/user/new">
+        <input type="submit" value="New User" />
+    </form>
     <button onclick="goBack()">Go Back</button>
 </div>
 <script src="/src/main.js"></script>
