--- a/views/partials/boilerplate.ejs
+++ b/views/partials/boilerplate.ejs
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
-        <link rel='stylesheet' type='text/css' href='/styles/reset.css'>
-        <link rel='stylesheet' type='text/css' href='/styles/style.css'>
+        <link rel="icon" href="data:," />
+        <link rel='stylesheet' type='text/css' href='/styles/reset.css' />
+        <link rel='stylesheet' type='text/css' href='/styles/style.css' />
     </head>
     <body>
         <main>
