--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -440,6 +440,10 @@ footer {
     justify-content: space-between;
 }
 
+/*      ABOUT PAGE       */
+
+
+
 /*      ERROR HANDLERS       */
 
 .container>p {
