--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,5 +1,17 @@
 <%- include('./partials/boilerplate') %>
 
-<h2>ABOUT</h2>
+<div class="container">
+    <h4>Heroku & Web Use</h4>
+    <ul>
+        <li>You can create a profile with your name, email, password and an username.</li>
+        <li>You can edit your user's information and delete your user's account.</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+</div>
 
 <%- include('./partials/end') %>
