Could be done??

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,16 @@
 <%- include('./partials/boilerplate') %>
 
-<div class="container">
+<div class="about">
     <h4>Heroku & Web Use</h4>
     <ul>
         <li>You can create a profile with your name, email, password and an username.</li>
         <li>You can edit your user's information and delete your user's account.</li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>There is a search page with preloaded cities and a button that allows you to search for more.</li>
+        <li>When on a city's page you will be able to save shortcuts to cities on your profile page.</li>
+        <li>City pages will get various popular data from Zomato's API on city cuisine and nearby locations.</li>
+        <li>The restaurants also have links to their own content and from their page you can save that shortcut also.</li>
+        <li>Restaurant pages show their times, address, menu links and links to even more information.</li>
+        <li>You may also remove any city or restaurant from your profile page.</li>
     </ul>
 </div>
 
