--- a/views/errors/two_restaurants.ejs
+++ b/views/errors/two_restaurants.ejs
@@ -1,7 +1,7 @@
 <%- include('../partials/boilerplate') %>
 
 <div class="container">
-    <h3>Your city already exists</h3>
+    <h3>Your Restaurant already exists</h3>
     <button onclick="goBack()">Go Back</button>
 </div>
 <script src="/src/main.js"></script>
