--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -442,7 +442,23 @@ footer {
 
 /*      ABOUT PAGE       */
 
+.about {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
+.about>h4 {
+    font-size: 2.5em;
+    font-weight: 600;
+    margin: 3%;
+}
+
+.about>ul>li {
+    font-size: 1.5em;
+    margin: 2%;
+    list-style: decimal;
+}
 
 /*      ERROR HANDLERS       */
 
