--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -8,7 +8,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    width: 100%;
+    width: 100vw;
 }
 
 main {
@@ -466,3 +466,32 @@ footer {
     font-size: 1.3em;
     margin: 2%;
 }
+
+
+
+
+/* INCOMPLETE DUE TO THEM NOT BEHAVING PROPERLY */
+
+/* @media screen and (max-width: 1100px) and (orientation: landscape) {
+    .container {
+        width: 100%;
+    }
+};
+
+@media only screen and (max-width: 880px) {
+    .container {
+        flex-wrap: wrap;
+    }
+
+    header {
+        flex-direction: column;
+    }
+
+    .navList {
+        display: none;
+    }
+
+    .navbar {
+        display: block;
+    }
+}; */
